widget: set initial width on .bubble-text to make sure the bubble doesn't "jump" when initially opening.

--- a/assets/widgetCss.css
+++ b/assets/widgetCss.css
@@ -49,6 +49,8 @@
 
 #remotestorage-widget .bubble-text {
     padding-right: 32px;
+    /* make sure the bubble doesn't "jump" when initially opening. */
+    min-width: 182px;
 }
 
 #remotestorage-widget .bubble.one-line {
